2007-02-15  Abel Cheung  <abelcheung@gmail.com>

	* class.*.php: Rename classes.

2007-02-15  Abel Cheung  <abelcheung@gmail.com>

	* class.mup.inc.php, class.scorerender.inc.php:
	Change density from 110 to 90.

2007-02-15  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php: Turn on transparency and turn off
	"show input source" option by default.

2007-02-15  Abel Cheung  <abelcheung@gmail.com>

	* class.*.inc.php: Rename.
	* wp-figurerender.php: Rename, and include renamed files.

2007-02-10  Abel Cheung  <abelcheung@gmail.com>

	* class.*.inc.php:
	_exec() now just returns the exit status of previous command.
	Command output is already stored in object variable.

	* class.lilypondrender.inc.php:
	Drop implicit header added to music fragment that caused
	rendering error.

2007-02-10  Abel Cheung  <abelcheung@gmail.com>

	* class.muprender.inc.php:
	Also sets $HOME. Mup mandates it. Grrrrr.

	* class.figurerender.inc.php, class.muprender.inc.php:
	Use touch instead of opening and closing file.

	* wp-figurerender.php:
	Change latex tag to [tex] and [/tex] (same as LatexRender).
	Change lilypond tag to [lilypond] and [/lilypond].
	figurerender_options_updated() - save options properly
	instead of calling ugly option.php page, and shows warning
	messages on top if something is wrong.

2007-02-08  Abel Cheung  <abelcheung@gmail.com>

	* wp-figurerender.php:
	Raise the content filtering to a higher priority to make sure
	it won't be preceded by wptexturize() or smiley conversion.

2007-02-08  Abel Cheung  <abelcheung@gmail.com>

	* class.figurerender.inc.php, class.muprender.inc.php:
	Implement convertimg().

2007-02-08  Abel Cheung  <abelcheung@gmail.com>

	* class.figurerender.inc.php, wp-figurerender.php:
	Implement transparency option.
	Catch error if input/output file not creatable.
	Lower privilege to level 9, instead of level 10 (admin).

	* class.muprender.inc.php:
	Change default binary location to /usr/local/bin/mup.
