@@ -1,3 +1,10 @@
+2007-02-16  Abel Cheung  <abelcheung@gmail.com>
+
+	* class.mup.inc.php, class.lilypond.inc.php:
+	Tune the staff size of mup and lilypond so they both
+	output 16pt staves. Drop safe mode for lilypond,
+	otherwise lilypond can't set staff size at all.
+
 2007-02-15  Abel Cheung  <abelcheung@gmail.com>
 
 	* class.*.php: Rename classes.
